fix: overflow

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,13 +1,14 @@
 * {
     margin: 0;
     box-sizing: border-box;
-    align-items: center; 
+    align-items: center;
 }
 
 body {
     background-color: #000000;
     margin-left: 8.3%;
     margin-right: 8.3%;
+    overflow: hidden;
 }
 
 .title {
